--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
 </head>
 
-<body>
-    <section class="ody">
-        <div class="dark">
+<body class="ody">
+    <div class="dark">
+        <section>
             <div class="pt-5">
                 <div class="container">
                     <div class="row">
@@ -34,37 +34,38 @@
                         <div class="col-sm-12 col-lg-8">
                             <div class="dar p-3">
                                 <div class="text-center fs-1 text-white fw-bolder">Student info</div>
-                              <div class="container-fluid">
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th>S/N</th>
-                                            <th>Name</th>
-                                            <th>gender</th>
-                                            <th>email</th>
-                                            <th>class</th>
-                                            <th>phonenumber</th>
-                                        </tr>
-                                        <!-- <td class="data1"></td>
+                                <div class="container-fluid">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>S/N</th>
+                                                <th>Name</th>
+                                                <th>gender</th>
+                                                <th>email</th>
+                                                <th>class</th>
+                                                <th>phonenumber</th>
+                                            </tr>
+                                            <!-- <td class="data1"></td>
                                         <td class="data2"></td>
                                         <td class="data3"></td>
                                         <td class="data4"></td>
                                         <td class="data5"></td>
                                         <td class="data6"></td> -->
 
-                                    </thead>
-                                    <tbody>
-                                        
-                                    </tbody>
-                                </table>
-                              </div>
+                                        </thead>
+                                        <tbody>
+
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <div class="message"></div>
     <script src="./app.js"></script>
 </body>
